--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-PyCamp and PyCamp material are copyright 2012 by Chris Calloway.  Check out his awesome training bootcamps at http://trizpug.org/boot-camp.
+# DecisionNerd Sandbox
 
-New additions to this software are copyright 2012 David Spencer under the MIT License.
+Tutorial materials for live instruction and examples for reference
+
+## How to Use
+
+## Background & License
+
+@DecisionNerd's first repo created while attending PyCamp in 2012.  PyCamp and PyCamp material are copyright 2012 by Chris Calloway.  Check out his awesome training bootcamps at http://trizpug.org/boot-camp. New additions to this software are copyright 2012 David Spencer under the MIT License.
